Change dynmap claim grouping to use the same algorithm as the other maps